# strava_analysis

./: .dockerignore  .gitignore  Dockerfile  README.md  activities.json  activities.sql  athlete.json  athlete.sql  docker-compose.yml  file.csv  func.py  funcs.py  gcp.py  heatmap.html  heatmap.py  main copy.py  main.py  map.html  map_with_route.html  pyproject.toml  requirements.txt  schema.sql  storage.py  table.py
app/: func.py  main.py
fetch/: func.py  main.py
strava_analysis/: func.py  main.py
